# obs_avoidance_private

./: .dockerignore  .gitignore  README.md
.docker/: entrypoint.sh  mp_ros2.Dockerfile
scripts/.build/: .build.sh
scripts/.deploy/: base.sh  devel.sh
workspace/ros_ws/: CMakeLists.txt
workspace/ros_ws/qp_mpc_planner/include/qp_mpc_planner/: bernstein_pol.hpp  diff_flat_formulation.hpp
workspace/ros_ws/src/cmake/: CmakeUtils.cmake
workspace/ros_ws/src/core/: CMakeLists.txt
workspace/ros_ws/src/core/cmake/: CmakeUtils.cmake
workspace/ros_ws/src/core/config/: Vehicle1_Config.yaml  Vehicle2_Config.yaml  vehicle1Config.yaml  vehicle_params.yaml
workspace/ros_ws/src/core/core/: CMakeLists.txt  CoreCollection.h  MacrosExpression.h  Singleton.h  Utils.h  Uuid.cpp  Uuid.h  UuidGenerator.cpp  UuidGenerator.h
workspace/ros_ws/src/core/utils/: CMakeLists.txt  Integrator.cpp  Integrator.h  PoseDefinition.cpp  PoseDefinition.h  UtilsCollection.h
workspace/ros_ws/src/core/utils/include/: CommonUtils.h  Integrator.h  UtilsCollection.h
workspace/ros_ws/src/core/utils/src/: CommonUtils.cpp  Integrator.cpp
workspace/ros_ws/src/core/vehicleModel/: CMakeLists.txt  VehicleModel.h  VehicleModelCollection.h
workspace/ros_ws/src/core/vehicleModel/geometricModel/: CMakeLists.txt  GeometricModel.h  GeometricModelCollection.h
workspace/ros_ws/src/core/vehicleModel/geometricModel/cubeoid/: CubeoidGeom.cpp  CubeoidGeom.h  EllipsoidCollisionFootPrint.cpp  EllipsoidCollisionFootPrint.h
workspace/ros_ws/src/core/vehicleModel/geometricModel/rectangular/: EllipseCollisionFootPrint.cpp  EllipseCollisionFootPrint.h  RectangularGeom.cpp  RectangularGeom.h
workspace/ros_ws/src/core/vehicleModel/geometricModel/rectangular/include/: EllipseCollisionFootPrint.h  RectangularGeom.h
workspace/ros_ws/src/core/vehicleModel/geometricModel/rectangular/src/: EllipseCollisionFootPrint.cpp  RectangularGeom.cpp
workspace/ros_ws/src/core/vehicleModel/singleTrackDynModel/: SingleTrackDynModel.cpp  SingleTrackDynModel.h
workspace/ros_ws/src/core/vehicleModel/stateModel/: StateModel.h  StateModelCollection.h
workspace/ros_ws/src/core/vehicleModel/stateModel/singleTrackDynStateModel/: SingleTrackDynStateModel.cpp  SingleTrackDynStateModel.h
workspace/ros_ws/src/core/vehicleModel/stateModel/singleTrackDynStateModel/include/: SingleTrackDynStateModel.h
workspace/ros_ws/src/core/vehicleModel/stateModel/singleTrackDynStateModel/src/: SingleTrackDynStateModel.cpp
workspace/ros_ws/src/project_utils/: CMakeLists.txt
workspace/ros_ws/src/project_utils/config/: Vehicle1_Config.yaml  sim_config.yaml  vehicle_params.yaml
workspace/ros_ws/src/project_utils/include/project_utils/: model_utils.hpp
workspace/ros_ws/src/project_utils/msg/: EigenVector.msg
workspace/ros_ws/src/project_utils/src/: common_utils.cpp  main.cpp  model_utils.cpp
workspace/ros_ws/src/qp_mpc_planner/: CMakeLists.txt
workspace/ros_ws/src/qp_mpc_planner/include/qp_mpc_planner/: qp_mpc_class.hpp
workspace/ros_ws/src/qp_mpc_planner/src/: qp_mpc_class.cpp
workspace/ros_ws/src/vehicle_interface/: CMakeLists.txt
workspace/ros_ws/src/vehicle_interface/include/vehicle_interface/: vehicle_interface_class.h  vehicle_interface_class.hpp
workspace/ros_ws/src/vehicle_interface/launch/: vehicle_interface.launch.py
workspace/ros_ws/src/vehicle_interface/src/: mpc_node.cpp  vehicle_interface_class.cpp  vehicle_interface_node.cpp
